	element by element copies. Plus a very spiffy token table lookup
	scheme which speeds things up a lot.
	* some fixes to parse the old word graphic file format, I cannot
	use very much of it, but at least I don't crash on it anymore.
	* added --dir option to wvHtml so that pictures can be placed in
	a seperate directory
	* removed some more unnecessary element by element copies
ALL TODO
	* allow latex or html or raw text conversion options.

	* mem leaks, more testing, more graphic checks, more escher 
	records etc etc.
	* promote old graphics into escher format.
	* decompress wmf etc.
	* get libwmf back into action and get picts together as well.

	* test with a bitmap, duplicate the headers for an escher
	parsed bitmap so as to convert the strange thing that we
	have found in WordPerfect2000 into a viable blip for
	the existing structure.

	* wvSetCharHandler(proc,NATIVE|UNICODE)
	* attempt to remove completely empty para's with the IsEmpty code

	* Got to think of some way to keep the list stuff in sync with the margins 
	of the enclosed paragraphs in html output.

	* need to add a color Auto thing that figures out what color goes against 
	what fore or back ground.

	* multiple columns are part of section code, how to support this in html 
	without brain failure.

	* put the default text and char stuff into one single "style", and then 
	try and figure out a way to save arbitrary no of styles into some nice 
	structure for later seaching and stylesheet implementation.

	* title not being done in the correct charset

	* style overrides for each word style, example idea in wvHtml.xml

	* comment/footnote and endnote support.

	* fully implement tablelooks, the flags in particular, and maybe the 
	colors for the bg should be farmed out to sperate config options rather
	than piggy backing on the other colors, also why did one of the text
	foregrounds not work on its own, while the others did, and is there